# project-discovery

./: .gitignore
echo-server/src/: main.rs
i2c-challenge/: Cargo.toml
i2c-challenge/src/: main.rs
led-compass-magnitude/: Cargo.toml
led-compass-magnitude/src/: calibration.rs  main.rs
led-compass-solution-1/src/: main.rs
led-compass-solution-2/: memory.x
led-compass-solution-2/src/: led.rs  main.rs
led-roulette/: Cargo.toml
led-roulette-2/: Cargo.toml
led-roulette-2/src/: main.rs
led-roulette-blink/: Cargo.toml
led-roulette-blink-2/: Cargo.toml
led-roulette-blink-2/src/: main.rs
led-roulette-blink/src/: main.rs
led-roulette-challenge/: Cargo.toml
led-roulette-challenge-solved/: Cargo.toml
led-roulette-challenge-solved/src/: main.rs
led-roulette-challenge/src/: main.rs
led-roulette/src/: main.rs
punch-o-meter/src/: main.rs
read-a-single-register/: Cargo.toml
read-a-single-register/src/: main.rs
uart-single-byte/: Cargo.toml
uart-single-byte/src/: main.rs
uart-string/: Cargo copy.toml  Cargo.toml  Embed.toml
uart-string/src/: main.rs
using-a-driver/src/: main.rs
